--- a/swim.html
+++ b/swim.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
 
 </head>
 
@@ -65,7 +66,9 @@
 <h1>Swimming and Lifeguarding</h1>
 <h3>City of Toronto, Earl Haig Secondary School</h3><br>
 
+<p>Between winter 2015 and summer 2016, I worked as a lifeguard, swim instructor, and aquatics program assistant for the city of Toronto. My work involved everything from ensuring pool safety to teaching city swimming programs.</p>
 
+<p>Throughout high school, I was a member of my school's swim team, winning multiple individual and team awards (including two-time city of Toronto champions), and serving as co-captain in the final year.</p>
 
 </div>
 
