--- a/weather.html
+++ b/weather.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
 
 </head>
 
@@ -64,8 +65,9 @@
 
 <h1>Earth Sciences Hobby Research</h1><br>
 
+<p>I have a personal interest in earth sciences, particularly in weather, climate, earthquakes, and volcanoes.</p>
 
-
+<p>I have collected data in various weather sites across Toronto, and performed several studies that linked local weather patterns to global oceanic and atmospheric conditions, as well as studying the effects of climate change in Toronto.</p>
 
 
 <p><a href="https://docs.google.com/presentation/d/17rTYIpXCpVzQt1EA5CrKk3m9nSGJGkCB9zM2Sxnq4q8/edit?usp=sharing">Link</a></p>
