--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
 
 </head>
 <!--Menu-->
