--- a/solarcar.html
+++ b/solarcar.html
@@ -11,6 +11,7 @@
 	<meta name="keywords" content="Bill,Sun,Bill Sun,Sun Bill,Sun Yuan,Sun Yuan Hong,Bill Yuan,Yuan Sun,Yuan Hong Sun,Bill Yuan Sun,Bill Yuan Hong Sun,Programming,Website,Portfolio">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
 
 </head>
 
