--- a/blogs.html
+++ b/blogs.html
@@ -599,7 +599,7 @@ IEC 60529, Pg.16, 18<br>
 <p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
 <div class="socialmedia">
-    <a href="index.html"><img src="github.png" alt="gh" width=30></a>
+    <a href="https://github.com/billyhsun?tab=overview&from=2018-05-01&to=2018-05-31"><img src="github.png" alt="gh" width=30></a>
     <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="outlook.png" alt="mail" width=30></a>
     <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="linkedin.png" alt="li" width=30></a>
     <a href="https://www.facebook.com/billyuanhong.sun"><img src="facebook.png" alt="fb" width=30></a>
