--- a/fes.html
+++ b/fes.html
@@ -69,7 +69,7 @@
 
 <p>At the start of grade 12, I noticed the lack of a focused engineering club at my high school and decided to found such a club focused in inspiring future engineers, developing future engineering students, connecting with engineering professionals, and organizing engineering-related events.</p>
 
-<p>The club organized multiple engineering-related events at school, ranging from guest speakers to mini-compeitions to the annual engineering competition at my high school.</p>
+<p>The club organized multiple engineering-related events at school, ranging from guest speakers to mini-competitions to the annual engineering competition at my high school.</p>
 
 <p>After the initial year, the club was merged with my high school's Engineers Without Borders chapter, which I mentored. Together, it still carries out the same functions as the original club, but it also participates in EWB sponsored events. </p>
 
