--- a/aer201.html
+++ b/aer201.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
 
-<!–Website Information ->
+<!--Website Information -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
+  	<script src="styles.js"></script>
 
 
 </head>
@@ -93,7 +95,7 @@
 <div class="footer">
 <br>                                   
 
-<p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
+<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
 <div class="socialmedia">
     <a href="https://github.com/billyhsun?tab=overview&from=2018-05-01&to=2018-05-31"><img src="github.png" alt="gh" width=30></a>
