--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
 
 
-<!–Website Information ->
+<!--Website Information -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
+  	<script src="styles.js"></script>
 
 </head>
 <!--Menu-->
@@ -23,14 +25,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-	<a href="autodrive.html">Autonomous Vehicle Team</a>
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
+    	<a href="autodrive.html">Autonomous Vehicle Team</a>
+    	<a href="solarcar.html">Solar Car Racing Team</a>
+    	<a href="ewb.html">Engineers Without Borders</a>
+    	<a href="ilead.html">iLead The Game, University of Toronto</a>
+    	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+    	<a href="weather.html">Earth Sciences Hobby Research</a>
+    	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+    	<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -38,14 +40,14 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-        <a href="research.html">Transportation Modelling Research</a>
-	<a href="app.html">Content Hosting App</a>
-	<a href="mi.html">Machine Learning Project</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
+      <a href="research.html">Transportation Modelling Research</a>
+    	<a href="app.html">Content Hosting App</a>
+    	<a href="mi.html">Machine Learning Project</a>
+    	<a href="game.html">Boxhead Video Game</a>
+    	<a href="parking.html">Parking Manager App Simulator</a>
+    	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+    	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+    	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
   <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
@@ -55,31 +57,36 @@
   </div>
 </div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:400px;">
 <body background="toronto1.png">
 
 <!--Main-->
 <title>Bill Sun's Portfolio</title>
 </head>
 
-<img src="portrait1.jpg" alt="Portrait" align = "right" width = 300 style="margin: 25px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+<img src="portrait1.jpg" alt="Portrait" align = "right" width = 300 style="margin-left: 50px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
 
-<h1>Home</h1><br>
+<h1 style="font-size: 40px;">Welcome!</h1><br>
 
-<p>Welcome! My name is Bill (Yuan Hong) Sun, and I am a second-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in full-stack software development, big data, and machine learning.</p> 
+<p style="font-size: 18px;">My name is Bill (Yuan Hong) Sun, and I am a second-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in full-stack software development, big data, and machine learning.</p> 
 
-<p>Entirely designed and built by myself, this is a portfolio of my skills, experiences, and insights. It includes coursework and projects in engineering, coding, and design, extracurricular activities, and my reflections in engineering design, as well as applying engineering in daily life.</p>
-
-<p>Please use the menu bar at the top to navigate this portfolio. Thank you for viewing!</p>
-<br>
 </div>
 
+
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:400px; background-color:'white'">
+
+<h1>About this portfolio</h1>
+<p style="font-size: 18px;">Entirely designed and built by myself, this is a portfolio of my skills, experiences, and insights. It includes coursework and projects in engineering, coding, and design, extracurricular activities, and my reflections in engineering design, as well as applying engineering in daily life.</p>
+
+<p style="font-size: 18px;">Please use the menu bar at the top to navigate this portfolio. Thank you for viewing!</p>
+<br>
+
+</div>
 
 <div class="footer">
 <br>                                   
 
-<p><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
+<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
 <div class="socialmedia">
     <a href="https://github.com/billyhsun?tab=overview&from=2018-05-01&to=2018-05-31"><img src="github.png" alt="gh" width=30></a>
