--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@ input[type=submit]:hover {
 
 <p><b>Email</b>: <a href="mailto:billyuanhong.sun@mail.utoronto.ca">billyuanhong.sun@mail.utoronto.ca</a></p>
 
-<p><b>Telephone</b>: (647) 987-3896</p>
+<p><b>Telephone</b>: +1 (647) 987-3896</p>
 
 <p><b>GitHub</b>: <a href="https://github.com/billyhsun">github.com/billyhsun</a></p>
 
