--- a/app.html
+++ b/app.html
@@ -62,14 +62,17 @@
 
 <body background="toronto1.png">
 
-<!–Main->
+<!--Main-->
 <title>Content Hosting App - Bill Sun</title>
 </head>
 
 <h1>Content Hosting and Streaming Application</h1><br>
-<h3>Gospel China Bridge</h3>
+<h3>Bible China Bridge</h3>
 
-
+<br>
+<h3>Links</h3>
+<p><a href="https://projects.invisionapp.com/share/HGJ9PJC3EMV#/screens">App mockup and page designs</a></p><br>
+<p><a href="">Code</a></p><br>
 
 </div>
 
