--- a/overview.html
+++ b/overview.html
@@ -185,7 +185,7 @@ box{
 
 <h2 id="edu">Education</h2>
 <p><b>University of Toronto, Faculty of Applied Science and Engineering</b></p>
-<p><i>B.A.Sc. Candidate in Engineering Science, Major in Machine Intelligence, 2016-2020 (Expected), _____Major GPA</i></p>
+<p><i>B.A.Sc. Candidate in Engineering Science, Major in Machine Intelligence, 2016-2020 (Expected), 3.45 Major GPA</i></p>
   <ul>
     <li>Completed an extensive engineering design course called Praxis (ESC101/102), which involved solving a real-life engineering problem in the GTA</li>
     <li>Currently taking a course (AER201) that involves the design and building of an autonomous robot</li>
