--- a/app.html
+++ b/app.html
@@ -71,8 +71,8 @@
 
 <br>
 <h3>Links</h3>
-<p><a href="https://projects.invisionapp.com/share/HGJ9PJC3EMV#/screens">App mockup and page designs</a></p><br>
-<p><a href="">Code</a></p><br>
+<p><a href="https://projects.invisionapp.com/share/HGJ9PJC3EMV#/screens">App mockup and page designs</a></p>
+<p><a href="">Code</a></p>
 
 </div>
 
