--- a/app.html
+++ b/app.html
@@ -66,13 +66,13 @@
 <title>Content Hosting App - Bill Sun</title>
 </head>
 
-<h1>Content Hosting and Streaming Application</h1><br>
+<h1>Content Hosting and Streaming Application</h1>
 <h3>Bible China Bridge</h3>
 
 <br>
 <h3>Links</h3>
 <p><a href="https://projects.invisionapp.com/share/HGJ9PJC3EMV#/screens">App mockup and page designs</a></p>
-<p><a href="">Code</a></p>
+<p><a href="">Code and other materials</a></p>
 
 </div>
 
