--- a/clubs.html
+++ b/clubs.html
@@ -62,12 +62,11 @@
   </div>
 </div>
 
+<body background = "background2.jpg">
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 
-<body background = "background2.jpg">
 
-
-<!–Main->
+<!--Main-->
 <title>Extracurriculars - Bill Sun</title>
 
 <h1>Extracurriculars Summary</h1><br>
@@ -123,7 +122,7 @@
 
 <p>Click the images to view the details for each activity.</p> 
 <br><br>
-
+</div>
 
 <div class="footer">
 <br>                                   
