--- a/overview.html
+++ b/overview.html
@@ -58,7 +58,7 @@
   </div>
 </div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:2000px;">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:500px;">
 <body style="background-color:#ccccff;">
 
 <!--Main-->
@@ -121,11 +121,11 @@ box{
 			<box style="color:white;background-color:#01700c">Teamwork</box>
 			<box style="color:white;background-color:#01700c">Communication</box>
 <p><b>○ Research:</b> Research project on transit modelling; Personal research projects in earth sciences.</p>
-<p><b>○ Languages:</b> <box style="color:white;background-color:#01700c">English</box>
-			<box style="color:white;background-color:#01700c">Mandarin Chinese</box></p>
+<p><b>○ Foreign Languages:</b> <box style="color:white;background-color:#01700c">Mandarin Chinese</box></p>
 
 <br> 
-
+</div>
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:700px;">
 
 <h2 id="exp">Experience Highlight</h2>
 
@@ -182,6 +182,8 @@ box{
 <p>A more detailed showcase of all my projects and extracurriculars can be accessed from the menu above.</p>
 <p>If you are interested, you can view my <b>résumé</b> <a href="Yuan Hong (Bill) Sun Resume.pdf">here</a></p><br>
 
+</div>
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:400px;">
 
 <h2 id="edu">Education</h2>
 <p><b>University of Toronto, Faculty of Applied Science and Engineering</b></p>
@@ -198,6 +200,8 @@ box{
   </ul>
 <br><br>
 
+</div>
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:500px;">
 
 <h2 id="summary">Personal Summary</h2>
 <h3>Why Engineering Science?</h3>
@@ -215,7 +219,7 @@ box{
 <p>You can also read about my engineering insights and reflections in my <a href="blogs.html">blog posts</a>.</p>
 <br><br>
 
-
+</div>
 
 <div class="footer">
 <br>                                   
