--- a/projects.html
+++ b/projects.html
@@ -58,11 +58,10 @@
   </div>
 </div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 <body background = "background3.jpg">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 
-
-<!–Main->
+<!--Main-->
 <title>Projects - Bill Sun</title>
 
 <h1>Projects Summary</h1><br>
@@ -118,6 +117,7 @@
 
 <p>Click the images to view the details for each project.</p> 
 <br><br>
+</div>
 
 
 <div class="footer">
