--- a/mi.html
+++ b/mi.html
@@ -81,7 +81,7 @@
     <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="outlook.png" alt="mail" width=30></a>
     <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="linkedin.png" alt="li" width=30></a>
     <a href="https://www.facebook.com/billyuanhong.sun"><img src="facebook.png" alt="fb" width=30></a>
-    <a href="https://www.instagram.com/billsunswag/?hl=en"><img src="instagram.png" alt="in" width=30></a>
+    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="instagram.png" alt="in" width=30></a>
     <a href="https://twitter.com/billsunswag"><img src="twitter.png" alt="tw" width=30></a>
 </div>
 
