--- a/aer201.html
+++ b/aer201.html
@@ -62,7 +62,7 @@
 
 <body style="background-color: #ccccff;">
 
-<!–Main->
+<!--Main-->
 <title>Pill Packaging Machine - Bill Sun</title>
 </head>
 
@@ -70,7 +70,7 @@
 <h3>AER201 - Engineering Design, University of Toronto</h3>
 <h4>Instructor: Prof. M. Reza Emami</h4>
 
-<p><a href="aer201.aerospace.utoronto.ca">Course Website</a></p>
+<p><a href="http://aer201.aerospace.utoronto.ca/course/syllabus.htm">Course Website</a></p>
 
 <p>AER201 is an multidisciplinary engineering design course that involves the design and construction of an autonomous robot, in teams of 3. My team had to build an autonomous pill packaging machine, where the user inserts a prescription organizer box and 3 different types of pills, and the machine organizes the pills into the pillbox based on given instructions. The instructions are loaded through a user interface on the machine. The requirements for the machine are outlined in the <a href="RFP - Pill Boxing.pdf">Request for Proposal (RFP)</a>.</p>
 
