--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 
-
 <!--Website Information -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,8 @@
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="b.png" sizes="32x32">
-  	<script src="styles.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  	<script type="text/javascript" src="styles.js"></script>
 
 </head>
 <!--Menu-->
@@ -25,7 +25,6 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-    	<a href="autodrive.html">Autonomous Vehicle Team</a>
     	<a href="solarcar.html">Solar Car Racing Team</a>
     	<a href="ewb.html">Engineers Without Borders</a>
     	<a href="ilead.html">iLead The Game, University of Toronto</a>
@@ -84,21 +83,21 @@
 </div>
 
 <div class="footer">
-<br>                                   
+    <br>                                   
 
-<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
+    <p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
 
-<div class="socialmedia">
-    <a href="https://github.com/billyhsun?tab=overview&from=2018-05-01&to=2018-05-31"><img src="github.png" alt="gh" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="outlook.png" alt="mail" width=30></a>
-    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="linkedin.png" alt="li" width=30></a>
-    <a href="https://www.facebook.com/billyuanhong.sun"><img src="facebook.png" alt="fb" width=30></a>
-    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="instagram.png" alt="in" width=30></a>
-    <a href="https://twitter.com/billsunswag"><img src="twitter.png" alt="tw" width=30></a>
-</div>
+    <div class="socialmedia">
+        <a href="https://github.com/billyhsun?tab=overview&from=2018-05-01&to=2018-05-31"><img src="github.png" alt="gh" width=30></a>
+        <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="outlook.png" alt="mail" width=30></a>
+        <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="linkedin.png" alt="li" width=30></a>
+        <a href="https://www.facebook.com/billyuanhong.sun"><img src="facebook.png" alt="fb" width=30></a>
+        <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="instagram.png" alt="in" width=30></a>
+        <a href="https://twitter.com/billsunswag"><img src="twitter.png" alt="tw" width=30></a>
+    </div>
 
-</p>
-<br><br>
+    </p>
+    <br><br>
 </div>
 
 </body>
