--- a/app.html
+++ b/app.html
@@ -72,7 +72,7 @@
 <br>
 <h3>Links</h3>
 <p><a href="https://projects.invisionapp.com/share/HGJ9PJC3EMV#/screens">App mockup and page designs</a></p>
-<p><a href="">Code and other materials</a></p>
+<p><a href="https://github.com/billyhsun/ChinaBridgeApp">Code and other materials</a></p>
 
 </div>
 
