--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@ input[type=submit]:hover {
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
 	<a href="app.html">Content Hosting App</a>
-	<a href="mi.html">Machine Learning Project</a>
+	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
 	<a href="game.html">Boxhead Video Game</a>
 	<a href="parking.html">Parking Manager App Simulator</a>
 	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
