--- a/research.html
+++ b/research.html
@@ -60,7 +60,7 @@
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 <body background="transit1.jpg">
 
-<!–Main->
+<!--Main-->
 <title>Transit Research - Bill Sun</title>
 </head>
 
@@ -81,7 +81,7 @@
 
 <br>
 <h3>Links</h3>
-<p>Code for some of the programs can be found <a href="https://github.com/billyhsun/Transportation_Modelling">here</a>.</p>
+<p>Code for some of the programs and the final report can be found <a href="https://github.com/billyhsun/Transportation_Modelling">here</a>.</p>
 <p><a href="http://uttri.utoronto.ca/">University of Toronto Transportation Research Institute</a></p>
 <p><a href="http://uttri.utoronto.ca/research/research-facilities/dmg/">Data Management Group</a></p>
 <p><a href="http://uttri.utoronto.ca/people/eric-j-miller/">Prof. Eric J. Miller</a></p>
