Changed link to GCB app

--- a/deep.html
+++ b/deep.html
@@ -42,7 +42,7 @@
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="app.html">Content Hosting App</a>
+	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
 	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
 	<a href="game.html">Boxhead Video Game</a>
 	<a href="parking.html">Parking Manager App Simulator</a>
@@ -61,7 +61,7 @@
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 <body background="toronto1.png">
 
-<!–Main->
+<!--Main-->
 <title>DEEP Summer Academy - Bill Sun</title>
 </head>
 
