--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="app.html">Content Hosting App</a>
+	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
 	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
 	<a href="game.html">Boxhead Video Game</a>
 	<a href="parking.html">Parking Manager App Simulator</a>
@@ -75,7 +75,7 @@
     </figure>
 
     <figure class="item">
-	<a href="app.html" target="_blank"><img src="chinabridge.jpg" alt="portfolio item" width=400 height=250></a>
+	<a href="https://devpost.com/software/chinabridge" target="_blank"><img src="chinabridge.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Content Hosting / Streaming Application</strong></font></p>
 	    <p><font color="white">Toronto Chinese Gospel Church</font></p>
