--- a/clubs.html
+++ b/clubs.html
@@ -46,7 +46,7 @@
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="app.html">Content Hosting App</a>
+	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
 	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
 	<a href="game.html">Boxhead Video Game</a>
 	<a href="parking.html">Parking Manager App Simulator</a>
