--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ input[type=submit]:hover {
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="app.html">Content Hosting App</a>
+	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
 	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
 	<a href="game.html">Boxhead Video Game</a>
 	<a href="parking.html">Parking Manager App Simulator</a>
@@ -93,7 +93,7 @@ input[type=submit]:hover {
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 <body background="background4.jpg">
 
-<!–Main->
+<!--Main-->
 <title>Contact Me - Bill Sun</title>
 </head>
 <body>
