--- a/ewb.html
+++ b/ewb.html
@@ -41,7 +41,7 @@
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="app.html">Content Hosting App</a>
+	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
 	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
 	<a href="game.html">Boxhead Video Game</a>
 	<a href="parking.html">Parking Manager App Simulator</a>
@@ -61,7 +61,7 @@
 
 <body style="background-color:#ccccff;">
 
-<!–Main->
+<!--Main-->
 <title>EWB - Bill Sun</title>
 </head>
 
