Added footer label

--- a/blogs.html
+++ b/blogs.html
@@ -595,6 +595,7 @@ IEC 60529, Pg.16, 18<br>
 3. Harvard Guide to Using Sources. (n.d.). Retrieved September 29, 2016, from http://isites.harvard.edu/icb/icb.do?keyword=k70847<br>
 <br><br><br>
 
+<!--Footer-->
 <div class="footer">
 <br>                                   
 
