--- a/parking.html
+++ b/parking.html
@@ -79,6 +79,7 @@ You can find more info <a href="https://docs.google.com/presentation/d/1USTnklmI
 </div>
 
 
+<!--Footer-->
 <div class="footer">
 <br>                                   
 
