--- a/solarcar.html
+++ b/solarcar.html
@@ -77,6 +77,7 @@
 <img src="solarcar2.jpg" alt="2" style="width:70%;margin:10px;">
 <br><br><br>
 
+<!--Footer-->
 <div class="footer">
 <br>                                   
 
