--- a/projects.html
+++ b/projects.html
@@ -83,9 +83,9 @@
     </figure>
 
     <figure class="item">
-	<a href="mi.html" target="_blank"><img src="placeholder.png" alt="portfolio item" width=400 height=250></a>
+	<a href="https://devpost.com/software/surroundsound-1u9ljk" target="_blank"><img src="surroundsound.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
-	    <p><font color="white"><strong>Machine Learning Project</strong></font></p>
+	    <p><font color="white"><strong>Music / Playlist Sharing Application</strong></font></p>
 	    <p><font color="white"></font></p>
 	</figcaption>
     </figure>
@@ -128,11 +128,11 @@
 
 <div class="socialmedia">
     <a href="https://github.com/billyhsun?tab=overview&from=2018-05-01&to=2018-05-31"><img src="github.png" alt="gh" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="outlook.png" alt="mail" width=30></a>
+    <a href="https://devpost.com/billyhsun"><img src="devpost.png" alt="devpost" width=30></a>
     <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="linkedin.png" alt="li" width=30></a>
     <a href="https://www.facebook.com/billyuanhong.sun"><img src="facebook.png" alt="fb" width=30></a>
     <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="instagram.png" alt="in" width=30></a>
-    <a href="https://twitter.com/billsunswag"><img src="twitter.png" alt="tw" width=30></a>
+    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="outlook.png" alt="mail" width=30></a>
 </div>
 
 </p>
