--- a/overview.html
+++ b/overview.html
@@ -162,10 +162,10 @@ box{
     </figure>
 
     <figure class="item">
-	<a href="autodrive.html" target="_blank"><img src="autodrive.jpg" alt="portfolio item" width=400 height=250></a>
+	<a href="https://devpost.com/software/surroundsound-1u9ljk" target="_blank"><img src="surroundsound.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
-	    <p><font color="white"><strong>Autodrive Team</strong></font></p>
-	    <p><font color="white">University of Toronto</font></p>
+	    <p><font color="white"><strong>Music / Playlist Sharing Application</strong></font></p>
+	    <p><font color="white"></font>Hack The 6ix 2018</p>
 	</figcaption>
     </figure>
 
