--- a/overview.html
+++ b/overview.html
@@ -165,7 +165,7 @@ box{
 	<a href="https://devpost.com/software/surroundsound-1u9ljk" target="_blank"><img src="surroundsound.jpg" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Music / Playlist Sharing Application</strong></font></p>
-	    <p><font color="white"></font>Hack The 6ix 2018</p>
+	    <p><font color="white">Hack The 6ix 2018</font></p>
 	</figcaption>
     </figure>
 
