--- a/overview.html
+++ b/overview.html
@@ -26,14 +26,13 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-	
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
+		<a href="solarcar.html">Solar Car Racing Team</a>
+		<a href="ewb.html">Engineers Without Borders</a>
+		<a href="ilead.html">iLead The Game, University of Toronto</a>
+		<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+		<a href="weather.html">Earth Sciences Hobby Research</a>
+		<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+		<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -42,13 +41,13 @@
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
+		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+		<a href="game.html">Boxhead Video Game</a>
+		<a href="parking.html">Parking Manager App Simulator</a>
+		<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+		<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+		<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
   <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
@@ -100,27 +99,35 @@ box{
 			<box style="color:black;background-color:#3bf934">HTML & CSS</box>
 			<box style="color:black;background-color:#3bf934">Javascript</box>
 			<box style="color:black;background-color:#ffff0f">React Native</box></p>
+
 <p><b>○ Hardware:</b> 	<box style="color:black;background-color:#3bf934">Circuits</box>
 			<box style="color:black;background-color:#3bf934">Electromagnetism</box>
 			<box style="color:black;background-color:#ffff0f">Verilog</box> 
 			<box style="color:black;background-color:#ffff0f">ARM Assembly</box>
+
 <p><b>○ Data Analysis / Management:</b>	<box style="color:white;background-color:#01700c">Microsoft Excel</box> 
 					<box style="color:white;background-color:#01700c">Statistics</box>
 					<box style="color:black;background-color:#3bf934">MATLAB</box>
 					<box style="color:black;background-color:#ffff0f">SAS</box> 
 					<box style="color:black;background-color:#ffff0f">SQL</box> 
+					<box style="color:black;background-color:#ffff0f">AWS (Amazon Web Services)</box> 
+
 <p><b>○ Design Tools:</b> <box style="color:white;background-color:#01700c">Technical Drawings</box>
 			<box style="color:black;background-color:#3bf934">AutoCAD</box>
 			<box style="color:black;background-color:#ffff0f">SolidWorks</box></p>
+
 <p><b>○ Engineering Design:</b> <box style="color:white;background-color:#01700c">Engineering Design Process</box>
 				<box style="color:white;background-color:#01700c">Prototyping</box>
 				<box style="color:black;background-color:#3bf934">Design Selection</box>
 				<box style="color:black;background-color:#3bf934">Testing Protocols</box>
+
 <p><b>○ Leadership:</b> <box style="color:white;background-color:#01700c">Organization</box>
 			<box style="color:white;background-color:#01700c">Time Management</box>
 			<box style="color:white;background-color:#01700c">Teamwork</box>
 			<box style="color:white;background-color:#01700c">Communication</box>
-<p><b>○ Research:</b> Research project on transit modelling; Personal research projects in earth sciences.</p>
+
+<p><b>○ Research:</b> <a href="research.html">Research project on transit modelling</a>; Personal research projects in earth sciences.</p>
+
 <p><b>○ Foreign Languages:</b> <box style="color:white;background-color:#01700c">Mandarin Chinese</box></p>
 
 <br> 
@@ -154,7 +161,7 @@ box{
     </figure>
 
     <figure class="item">
-	<a href="parking.html" target="_blank"><img src="parking1.png" alt="portfolio item" width=400 height=250></a>
+	<a href="parking.html" target="_blank"><img src="parksmart.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Parking Manager Application Simulator</strong></font></p>
 	    <p><font color="white">ICS4U-Computer Programming, Earl Haig Secondary School</font></p>
