--- a/projects.html
+++ b/projects.html
@@ -26,14 +26,13 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-	
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
+		<a href="solarcar.html">Solar Car Racing Team</a>
+		<a href="ewb.html">Engineers Without Borders</a>
+		<a href="ilead.html">iLead The Game, University of Toronto</a>
+		<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+		<a href="weather.html">Earth Sciences Hobby Research</a>
+		<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+		<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -42,13 +41,13 @@
     </button>
     <div class="dropdown-content">
         <a href="research.html">Transportation Modelling Research</a>
-	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
+		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+		<a href="game.html">Boxhead Video Game</a>
+		<a href="parking.html">Parking Manager App Simulator</a>
+		<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+		<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+		<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
   <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
@@ -99,7 +98,7 @@
     </figure>
 
     <figure class="item">
-	<a href="parking.html" target="_blank"><img src="parking1.png" alt="portfolio item" width=400 height=250></a>
+	<a href="parking.html" target="_blank"><img src="parksmart.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Parking Manager Application Simulator</strong></font></p>
 	    <p><font color="white">ICS4U-Computer Programming, Earl Haig Secondary School</font></p>
