Got rid of education

--- a/overview.html
+++ b/overview.html
@@ -190,27 +190,10 @@ box{
 <p>If you are interested, you can view my <b>résumé</b> <a href="Yuan Hong (Bill) Sun Resume.pdf">here</a></p><br>
 
 </div>
-<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:400px;">
 
-<h2 id="edu">Education</h2>
-<p><b>University of Toronto, Faculty of Applied Science and Engineering</b></p>
-<p><i>B.A.Sc. Candidate in Engineering Science, Major in Machine Intelligence, 2016-2020 (Expected), 3.45 Major GPA</i></p>
-  <ul>
-    <li>Completed an extensive engineering design course called Praxis (ESC101/102), which involved solving a real-life engineering problem in the GTA</li>
-    <li>Currently taking a course (AER201) that involves the design and building of an autonomous robot</li>
-    <li>Courses in algorithms & data structures, statistics, digital logic, and computer organization</li>
-  </ul>
-<p><b>Earl Haig Secondary School, North York, ON</b></p>
-<p><i>Ontario Secondary School Diploma (OSSD), 2012-2016, 96% Admission Average</i></p>
-  <ul>
-    <li>Courses in computer programming, computer networking (CISCO), data analytics (SAS), and computer-aided design</li>
-  </ul>
-<br><br>
-
-</div>
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:500px;">
 
-<h2 id="summary">Personal Summary</h2>
+<h2 id="summary">Personal Statement</h2>
 <h3>Why Engineering Science?</h3>
 <p>I have been interested in engineering at a young age. I have been fascinated by machines, electronics, and transportation equipment. I also tried to copy my father’s technical drawings for fun. When I was taught visual arts, I learned how to represent and express my ideas in a unique manner. After I moved to Canada in 8th grade, and went through the struggles of being an immigrant, I realized the importance of helping out people in need. Incorporating my strengths in math and sciences, as well as my interest in design and research, I decided to peruse in engineering sciences.</p>
 
