--- a/ilead.html
+++ b/ilead.html
@@ -49,7 +49,7 @@
 	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
     <div class="logo"><h1 style="margin:1px;">
   	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
