--- a/overview.html
+++ b/overview.html
@@ -50,7 +50,7 @@
 		<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Overview</a></div>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
     <div class="logo"><h1 style="margin:1px;">
   	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
@@ -60,7 +60,7 @@
 <body style="background-color:#ccccff;">
 
 <!--Main-->
-<title>Overview - Bill Sun</title>
+<title>About Me - Bill Sun</title>
 
 <!--Table of Contents-->
 <div id="toc_container">
@@ -68,7 +68,6 @@
   <ul class="toc_list">
   <li><a href="#skills">Skills Summary</a></li>
   <li><a href="#exp">Experience Highlight</a></li>
-  <li><a href="#edu">Education</a></li>
   <li><a href="#summary">Personal Summary</a></li>
 </ul>
 </div>
